--- a/app/src/main/res/layout/fragment_forgot_password_page.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_page.xml
@@ -49,8 +49,37 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/passwordTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/emailTitle"
         android:layout_below="@id/resetPasswordDesc"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="left"
+        android:text="Enter your email"
+        android:textSize="16sp"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/email"
+        android:layout_below="@id/emailTitle"
+        android:background="@drawable/white_field"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Password"
+        android:textColorHint="@color/pastel_red"
+        android:drawablePadding="20dp"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:fontFamily="@font/poppins"
+        android:textSize="16sp"
+        />
+
+    <TextView
+        android:id="@+id/passwordTitle"
+        android:layout_below="@id/email"
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
