--- a/app/src/main/res/layout/fragment_all_recipes_page.xml
+++ b/app/src/main/res/layout/fragment_all_recipes_page.xml
@@ -1,192 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".allRecipesPage">
 
-    <ImageButton
-        android:id="@+id/asian_salmon_picture2"
-        android:layout_width="368dp"
-        android:layout_height="215dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="84dp"
-        android:background="@drawable/roundcorner"
-        android:clickable="true"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:onClick="clickNew"
-        android:scaleType="fitXY"
-        android:src="@drawable/green_tea_salmon" />
+    <!-- TODO: Update blank fragment layout -->
 
-    <ImageButton
-        android:id="@+id/lemonchicken"
-        android:layout_width="368dp"
-        android:layout_height="215dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="322dp"
-        android:background="@drawable/roundcorner"
-        android:clickable="true"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:onClick="clickNew"
-        android:scaleType="fitXY"
-        android:src="@drawable/lemon_chicken" />
-
-    <ImageButton
-        android:id="@+id/tunapasta"
-        android:layout_width="368dp"
-        android:layout_height="215dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="558dp"
-        android:background="@drawable/roundcorner"
-        android:clickable="true"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:onClick="clickNew"
-        android:scaleType="fitXY"
-        android:src="@drawable/tuna_pasta" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="280dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="225dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Green Tea Noodles with Sticky Sweet Chili Salmon "
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="485dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Lemon Chicken"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <TextView
+            android:layout_width="167dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="All Recipes"
+            android:textSize="30dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView26"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="697dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="Tuna and Caper Pasta with Crispy Breadcrumbs"
-        android:textColor="#FFFFFF"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/btnBackAllRecipeToHomePage"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="13dp"
+            android:text="Back"></Button>
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="275dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="14 Ingredients   |   40 min"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="512dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="10 Ingredients   |   10 min"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RecyclerAllrecipe"
+        android:layout_width="match_parent"
+        android:layout_height="467dp">
 
-    <TextView
-        android:id="@+id/textView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="748dp"
-        android:fontFamily="@font/poppins_medium"
-        android:text="10 Ingredients   |   15 min"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="324dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/roundcorner"
-        android:backgroundTint="#FFFFFF"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        android:src="@drawable/ic_black_options" />
-
-    <ImageButton
-        android:id="@+id/imageButton6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="561dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/roundcorner"
-        android:backgroundTint="#FFFFFF"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        android:src="@drawable/ic_black_options" />
-
-    <ImageButton
-        android:id="@+id/imageButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="87dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/roundcorner"
-        android:backgroundTint="#FFFFFF"
-        android:contentDescription="@string/hello_blank_fragment"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        android:src="@drawable/ic_black_options" />
+    </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:foregroundGravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:context=".MainActivity">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/hello_blank_fragment"
+            android:src="@drawable/ic_baseline_white_plus_sign_24"
+
+            app:layout_anchor="@id/bottomAppBar" />
 
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
@@ -208,30 +82,7 @@
                 />
         </com.google.android.material.bottomappbar.BottomAppBar>
 
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/hello_blank_fragment"
-            android:src="@drawable/ic_baseline_white_plus_sign_24"
-
-            app:layout_anchor="@id/bottomAppBar" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="11dp"
-            android:layout_marginTop="19dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="All Recipes"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_anchor="@+id/textView3"
-            app:layout_anchorGravity="bottom|center" />
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</RelativeLayout>
+
+
+</LinearLayout>
